Make jdk.attach module usage optional, improve compatibility when running from JRE